<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6">

    <RelativeLayout
        android:id="@+id/modifyLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#46a0f0">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back"
            android:onClick="viewClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/oldText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/modifyLayout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/oldText">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:hint="@string/input_phones"
            android:textColorHint="#bfbfbf"
            android:textSize="13sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/newText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pwd"
        android:layout_below="@id/modifyLayout"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/newText">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:hint="@string/rep_pwd"
            android:textColorHint="#bfbfbf"
            android:textSize="13sp"
            android:inputType="textPassword"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/psd_img"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/msgText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/identify"
        android:layout_below="@id/modifyLayout"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/msgText">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:hint="@string/identify_msg"
            android:textColorHint="#bfbfbf"
            android:textSize="13sp" />

        <Button
            android:id="@+id/getIdentify"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/identify"
            android:background="@drawable/shape"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_text"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"/>
    <Button
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_below="@id/tip_text"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</RelativeLayout>
