<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6">

    <RelativeLayout
        android:id="@+id/setLayout"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#46a0f0">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/setLayout"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/clear_cache"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setLayout2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/setLayout1"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/notification_push"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.ijustzxh.ui.SlideSwitch
            android:id="@+id/slideSwitch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setLayout3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/setLayout2"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/modify_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/arrow" />
    </RelativeLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/setLayout3"
        android:layout_marginTop="45dp"
        android:background="#46a0f0"
        android:text="@string/exit_login"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>
