<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="fill_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/head_top"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginLayout1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@id/loginLayout">

        <ImageView
            android:id="@+id/userText"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:src="@drawable/user_img"
            android:gravity="center"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/userEdit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/input_phone"
            android:textColorHint="#bfbfbf"
            android:layout_toRightOf="@id/userText"
            android:paddingLeft="20dp"
            android:background="@color/white"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/arrow_ud"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/loginLayout1"
        android:background="#e6e6e6"></View>

    <RelativeLayout
        android:id="@+id/loginLayout2"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/line">

        <ImageView
            android:id="@+id/psd_img"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:src="@drawable/pwd_img"
            android:gravity="center"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/psdEdit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:hint="@string/input_pwd"
            android:textColorHint="#bfbfbf"
            android:layout_toRightOf="@id/psd_img"
            android:paddingLeft="20dp"
            android:background="@color/white"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/psd_img"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"/>

    </RelativeLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/loginLayout2"
        android:background="#e6e6e6"></View>


    <CheckBox
            android:id="@+id/remember_pwd"
            android:button="@drawable/checkbox_pwd"
            android:text="@string/rem_pwd"
            android:layout_below="@id/line1"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            android:textColor="#707070"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_below="@id/remember_pwd"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <RadioButton
        android:id="@+id/forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:layout_below="@id/login"
        android:text="@string/forget_pwd"
        android:textColor="#707070"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>
    <View
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/newUser"
        android:background="#e6e6e6"></View>


    <TextView
        android:id="@+id/newUser"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/new_user"
        android:textColor="#46a0f0"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

    </TextView>

</RelativeLayout>
